exports[`hideText should add rules when block has existing rules 1`] = `
Object {
  "background-image": "url(logo.png)",
  "overflow": "hidden",
  "textIndent": "101%",
  "whiteSpace": "nowrap",
}
`;

exports[`hideText should return the CSS in JS 1`] = `
Object {
  "overflow": "hidden",
  "textIndent": "101%",
  "whiteSpace": "nowrap",
}
`;
